# boilderplate

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  todo.txt
example_package/: api.py  app.py  predict.py  train.py
example_package/data/: data.csv  example.json
example_package/models/: model.joblib
notebooks/: notebook.ipynb
tests/: test_example.py
